feat(imageLibrary): add swagger
